# JITc

./: CMakeLists.txt  JITc.c
include/: compiler.h  errors.h  lexer.h  parser.h
src/: compiler.c  errors.c  lexer.c  parser.c
syntax/: function.jc  simple.jc  variables.jc
